--- a/hand_eye_flexbe_behaviors/package.xml
+++ b/hand_eye_flexbe_behaviors/package.xml
@@ -1,4 +1,8 @@
-<package>
+<?xml version="1.0"?>
+<?xml-model
+    href="http://download.ros.org/schema/package_format3.xsd"
+    schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>hand_eye_flexbe_behaviors</name>
   <version>1.0.0</version>
   <description>
@@ -7,13 +11,19 @@
   <maintainer email="todo@todo.com">TODO</maintainer>
   <license>BSD</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>message_generation</build_depend>
-  <run_depend>message_generation</run_depend>
-  <run_depend>rospy</run_depend>
+    <exec_depend>rclcpp</exec_depend>
+    <exec_depend>rclpy</exec_depend>
 
-  <export>
-    <flexbe_behaviors />
-  </export>
+    <test_depend>ament_copyright</test_depend>
+    <test_depend>ament_flake8</test_depend>
+    <test_depend>ament_pep257</test_depend>
+    <test_depend>python3-pytest</test_depend>
 
+    <buildtool_depend>ament_cmake</buildtool_depend>
+    <buildtool_depend>ament_cmake_python</buildtool_depend>
+
+    <export>
+        <flexbe_behaviors />
+        <build_type>ament_cmake</build_type>
+    </export>
 </package>
