--- a/hand_eye_flexbe_states/package.xml
+++ b/hand_eye_flexbe_states/package.xml
@@ -1,4 +1,8 @@
-<package>
+<?xml version="1.0"?>
+<?xml-model
+    href="http://download.ros.org/schema/package_format3.xsd"
+    schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>hand_eye_flexbe_states</name>
   <version>1.0.0</version>
   <description>
@@ -8,14 +12,21 @@
   <maintainer email="todo@todo.com">TODO</maintainer>
   <license>BSD</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <exec_depend>rclcpp</exec_depend>
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>flexbe_core</exec_depend>
 
-  <run_depend>rospy</run_depend>
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+  <test_depend>python3-pytest</test_depend>
 
-  <run_depend>flexbe_core</run_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
 
   <export>
-    <flexbe_states />
+      <flexbe_states />
+      <build_type>ament_cmake</build_type>
   </export>
 
 </package>
